--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "NF",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
